--- a/README.Rmd
+++ b/README.Rmd
@@ -1,28 +1,40 @@
 ---
-output: github_document
+title: "dissmapr: Automated Compositional Dissimilarity & Biodiversity Turnover"
+output:
+  github_document:
+    toc: true
+    toc_depth: 2
+  html_document:
+    toc: true
+    theme: cerulean     # or bootstrap, etc.
+    mathjax: default
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-```{r, include = FALSE}
+```{r setup, include=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%"
+  out.width = "100%",
+  echo = TRUE,
+  message = FALSE,
+  warning = FALSE
 )
 ```
 
-# templateB3
+# `dissmapr`
 
 <!-- badges: start -->
+[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nithecs-biomath/RBasicPack/master?urlpath=rstudio)
 [![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html#stable)
-[![test-coverage](https://github.com/macSands/templateB3/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/macSands/templateB3/actions/workflows/test-coverage.yaml)
-[![Codecov test coverage](https://codecov.io/gh/macSands/templateB3/graph/badge.svg)](https://app.codecov.io/gh/macSands/templateB3)
-[![R-CMD-check](https://github.com/macSands/templateB3/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/macSands/templateB3/actions/workflows/R-CMD-check.yaml)
+[![test-coverage](https://github.com/macSands/dissmapr/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/macSands/dissmapr/actions/workflows/test-coverage.yaml)
+[![Codecov test coverage](https://codecov.io/gh/macSands/dissmapr/graph/badge.svg)](https://app.codecov.io/gh/macSands/dissmapr)
+[![R-CMD-check](https://github.com/macSands/dissmapr/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/macSands/dissmapr/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-# dissMapR: A Novel Framework for Automated Compositional Dissimilarity and Biodiversity Turnover Analysis
+# `dissmapr`: A Novel Framework for Automated Compositional Dissimilarity and Biodiversity Turnover Analysis
 
 ## Tutorial
 
@@ -30,11 +42,22 @@ This document outlines a step-by-step workflow for analyzing compositional dissi
 All code chunks below illustrate how one might implement each step in R, using various commonly used packages (e.g., `sf`, `terra`, `dplyr`, `ggplot2`, etc.).  
 Please note that paths to data, package names, or exact functions may need adjustment depending on your local setup.
 
-```{r setup}
-# library(dissMapR)
-library(templateB3)
+```{r install}
+# install remotes if needed
+# install.packages("remotes")
+remotes::install_github("macSands/dissmapr")
+```
 
-# setwd('D:\\Methods\\R\\myR_Packages\\templateB3')
+
+```{r setup}
+# Load your package 
+# library(dissMapR)
+library(dissmapr)
+
+# Make sure so all exported functions are available
+devtools::load_all()
+
+# setwd('D:\\Methods\\R\\myR_Packages\\myCompletePks\\dissmapr')
 ```
 
 ## 1. User-Defined Area of Interest and Grid Resolution
@@ -50,6 +73,8 @@ library(data.table)
 library(httr)
 library(geodata)
 library(zoo)
+library(zetadiv)
+library(viridis)
 ```
 
 #### Define the AOI (e.g., using a shapefile 'rsa.shp')
@@ -57,7 +82,7 @@ library(zoo)
 # Adjust the path and layer name as needed
 # aoi <- st_read("D:/Methods/R/myR_Packages/all_B3_packages/dissMapR/data/rsa.shp")
 # aoi <- st_read(system.file("data", "rsa.shp", package = "dissMapR"))
-aoi <- sf::st_read("D:/Methods/R/myR_Packages/templateB3/inst/extdata/rsa.shp")
+aoi <- sf::st_read("inst/extdata/rsa.shp")
 # aoi <- st_read(system.file("extdata", "rsa.shp", package = "dissMapR"))
 ```
 
@@ -495,15 +520,76 @@ dim(sites_xy)
 - Always verify spatial extents, coordinate reference systems, and the validity of environmental data before scaling up analyses.  
 
 ---
-### Draft notes from CangH:
 
-Dissimilarity workflow   
-1.	User-defined area of interest and grid resolution (incl. rsa shape file, 0.5 degree), generate a map of AOI and a data frame ‘xy’ of site centroids.   
-2.	Site by species matrix and sampling effort (incl. access occurrences of user-specified taxon or species list, assign records to the grids, generate a raster of occurrence counts called sampling effort), generate a binary data frame ‘sbs’, a richness map of sbs row sums, a single variable data frame of sampling effort ‘sam.eff’ and its raster map. Note, occurrence coordinates are only used for assigning then into grids; they are not needed beyond this step.   
-3.	Site by environment matrix; extract environmental variables only for site centroids ‘xy’ and stack them into raster and data frame ‘sbe’; add ‘sam.eff’ to the stack raster and sbe.   
-4.	Zeta decline (sbs) and zeta decay (sbs, xy), orders 2:15. Generate statistics and figures, no maps.   
-5.	Zeta.msgdm(sbs, sbe, xy), order 2, 3, 5, 10. Generate statistics and figures, no maps. Save fitted order 2 model ‘zeta2’.   
-6.	Predict(zeta2) with ‘sam.eff’ in the ‘sbe’ replaced by ‘sam.max’ a constant for all sites = max(sam.eff). Predict for the updated sbe and xy and produce a site by site matrix of predicted zeta ‘zeta.now’. Run nmds for the predicted zeta matrix and plot RGB of the 3 component scores. Clustering analyses directly using zeta.now. Generate main maps of dissimilarity (the rgb plot) and bioregions (from clustering).   
-7.	Predict(zeta2) with appended (future scenarios) environmental variables and ‘sam.max’ in sbe. For m number of scenarios plus the present scenario (step6) and n sites of xy, this updated sbe.future will have k = (m+1) x n number of rows. ‘xy’ also updated with k rows. Predict a k by k matrix of predicted zeta ‘zeta.future’. Nmds and clustering of zeta.future, map sub matrices to indicate predicted future dissimilarity, bioregions, and temporal turnover. Note, step6 is redundant if step7 is needed; step7 has the same code but more results including those from step6 but potentially computational demanding.   
-8.	Deposit all data frames, tables, maps, and standard metadata to zenodo
+# Basic Dissimilarity Workflow
+## 1. User-defined area of interest and grid resolution 
+>> Read RSA shape file and set resolution e.g. 0.5 degree
+>> Generate a map of AOI
+>> Generate a data frame ‘xy’ of site centroids
 
+---
+
+## 2. Site by species matrix and sampling effort 
+>> Access occurrences of user-specified taxon or species list
+>> Assign records to the grids
+>> Generate a raster of occurrence counts called `sam_eff`
+>> Generate a binary data frame ‘sbs’
+>> Generate richness of sbs row sums and map
+>> Generate a single variable data frame of sampling effort ‘sam.eff’ 
+>> Generate ‘sam.eff’ raster map
+>> Note: occurrence coordinates are only used for assigning then into grids; they are not needed beyond this step.
+
+---
+
+## 3. Site by environment matrix
+>> Stack environmental variables into raster 
+>> Add ‘sam.eff’ raster to the stack raster
+>> Extract environmental variables for site centroids ‘xy’ 
+>> Generate data frame ‘sbe’
+
+---
+
+## 4a. Zeta decline (sbs), orders 2:15
+>> Generate statistics and figures, no maps
+
+## 4b. Zeta decay (sbs, xy), orders 2:15
+>> Generate statistics and figures, no maps
+
+---
+
+## 5. Zeta.msgdm(sbs, sbe, xy), order 2, 3, 5, 10
+>> Generate statistics and figures, no maps
+>> Save fitted order 2 model ‘zeta2’
+
+---
+
+## 6a. Predict(zeta2) with ‘sam.eff’
+>> In the ‘sbe’ add ‘sam.max’, a constant for all sites = max(sam.eff)
+>> Predict for the updated sbe and xy 
+>> Produce a site by site matrix of predicted zeta ‘zeta.now’
+>> Run nmds for the predicted zeta matrix 
+>> Plot RGB of the 3 component scores
+
+## 6b. Clustering analyses directly using zeta.now
+>> Generate maps of dissimilarity (the rgb plot)
+>> Generate map of bioregions (from clustering)
+
+---
+
+## 7. Predict(zeta2) 
+>> with appended (future scenarios) environmental variables and ‘sam.max’ in sbe
+>> For m number of scenarios plus the present scenario (step 6a) and n sites of xy
+>> Updated sbe.future will have k = (m+1) x n number of rows
+>> ‘xy’ also updated with k rows
+>> Predict a k by k matrix of predicted zeta ‘zeta.future’
+>> Nmds of zeta.future
+>> clustering of zeta.future
+>> Map sub matrices to indicate predicted future dissimilarity
+>> Map predicted future bioregions
+>> Map temporal turnover. 
+>> Note: step 6a is redundant if step 7 is needed
+>> Note: step 7 has the same code but more results including those from step 6 but potentially computational demanding
+
+---
+
+## 8. Deposit all data frames, tables, maps, and standard metadata to zenodo
